[gd_scene load_steps=61 format=3 uid="uid://gxvnoob7qh73"]

[ext_resource type="Script" path="res://scenes/levels/dapur-01/1.6 - Minigame memakan makanan/minigame_memakan_makanan.gd" id="1_nc0lm"]
[ext_resource type="Texture2D" uid="uid://ob67uoqck1jk" path="res://assets/1.6 - Minigame memakan makanan/Background meja.png" id="1_updoi"]
[ext_resource type="Texture2D" uid="uid://b8s1vkliy2vuf" path="res://assets/1.6 - Minigame memakan makanan/piring.png" id="2_75sqk"]
[ext_resource type="Texture2D" uid="uid://bayo7ofu3mjsk" path="res://assets/1.6 - Minigame memakan makanan/nasi3.png" id="3_06w3k"]
[ext_resource type="PackedScene" uid="uid://ckoidmc18bccv" path="res://scenes/levels/dapur-01/1.6 - Minigame memakan makanan/Food.tscn" id="3_fp883"]
[ext_resource type="Texture2D" uid="uid://bkpxsojcul1kv" path="res://assets/1.6 - Minigame memakan makanan/nasi2.png" id="4_umbpg"]
[ext_resource type="Texture2D" uid="uid://cjeylnud2jjyw" path="res://assets/1.6 - Minigame memakan makanan/nasi1.png" id="5_oiww5"]
[ext_resource type="Texture2D" uid="uid://de6ogyyvgsxd5" path="res://assets/1.6 - Minigame memakan makanan/sosis1.png" id="7_ttgjg"]
[ext_resource type="Texture2D" uid="uid://d3x0044jhjkqa" path="res://assets/1.6 - Minigame memakan makanan/sosis2.png" id="7_wj8dm"]
[ext_resource type="Texture2D" uid="uid://dr1r51u3kxq2m" path="res://assets/1.6 - Minigame memakan makanan/telur2.png" id="8_gkxau"]
[ext_resource type="Texture2D" uid="uid://caeju6adkku2j" path="res://assets/1.6 - Minigame memakan makanan/telur1.png" id="9_xxh1c"]
[ext_resource type="Texture2D" uid="uid://b1f4h6qqjutbd" path="res://assets/1.6 - Minigame memakan makanan/sayur1.png" id="12_nucvp"]
[ext_resource type="Texture2D" uid="uid://rumr81m4uap6" path="res://assets/1.6 - Minigame memakan makanan/sayur2.png" id="13_fooqg"]
[ext_resource type="Texture2D" uid="uid://d4dcxo1h2yv82" path="res://assets/1.6 - Minigame memakan makanan/background hitam.svg" id="15_xrxpe"]
[ext_resource type="Script" path="res://scenes/levels/dapur-01/1.6 - Minigame memakan makanan/tangan.gd" id="16_6lkrg"]
[ext_resource type="Texture2D" uid="uid://bri31voyr6wlc" path="res://assets/kenney_input-prompts/Keyboard & Mouse/Vector/keyboard_arrow_down.svg" id="19_rq5mi"]
[ext_resource type="Texture2D" uid="uid://cn87rnxaplobr" path="res://assets/kenney_input-prompts/Keyboard & Mouse/Vector/keyboard_arrow_left.svg" id="20_hi1bo"]
[ext_resource type="PackedScene" uid="uid://dbjafnpmklodo" path="res://scenes/tangan/tangan.tscn" id="21_aapbp"]
[ext_resource type="Texture2D" uid="uid://cgc3btaue35ns" path="res://assets/kenney_input-prompts/Keyboard & Mouse/Vector/keyboard_arrow_right.svg" id="21_e4p35"]
[ext_resource type="Texture2D" uid="uid://cup2gy822ac3t" path="res://assets/kenney_input-prompts/Keyboard & Mouse/Vector/keyboard_arrow_up.svg" id="22_8fm80"]
[ext_resource type="Texture2D" uid="uid://b5mn6x0ew7yep" path="res://assets/3.8 - Minigame vending machine/tangan2.svg" id="22_pyw83"]
[ext_resource type="Texture2D" uid="uid://chlmpgpgu6ilx" path="res://assets/3.8 - Minigame vending machine/tangan1.svg" id="23_4rhke"]
[ext_resource type="FontFile" uid="uid://c0ebip7pivdjd" path="res://assets/Klee_One/KleeOne-SemiBold.ttf" id="23_abk7g"]
[ext_resource type="Texture2D" uid="uid://qvjtw5tojrix" path="res://assets/kenney_input-prompts/Keyboard & Mouse/Vector/keyboard_z.svg" id="24_1cklm"]
[ext_resource type="Texture2D" uid="uid://c7fsvgvsq3mjt" path="res://assets/kenney_game-icons/PNG/White/2x/arrowRight.png" id="25_mdkhg"]
[ext_resource type="Texture2D" uid="uid://fwo04jveowp6" path="res://assets/kenney_game-icons/PNG/White/2x/arrowLeft.png" id="26_q0rff"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qjnw3"]
radius = 8.05928
height = 129.354

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a8t8y"]
radius = 8.08849
height = 253.445

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sy334"]
radius = 9.11414
height = 81.0344

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hjo1u"]
radius = 31.8605
height = 314.282

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n70my"]
radius = 35.7546
height = 256.573

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jcrn1"]
radius = 35.75
height = 256.57

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v2h1y"]
radius = 6.11514
height = 22.8451

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s75ux"]
radius = 5.51791
height = 20.5078

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fort1"]
radius = 22.711
height = 1143.9

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rwybk"]
radius = 22.71
height = 1128.32

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yifie"]
radius = 8.9774
height = 92.8198

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cpmca"]
radius = 8.98
height = 92.82

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l2j3w"]
radius = 46.187
height = 188.896

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_488rf"]
radius = 46.19
height = 188.9

[sub_resource type="CircleShape2D" id="CircleShape2D_n6uew"]
radius = 39.0026

[sub_resource type="CircleShape2D" id="CircleShape2D_und0a"]
radius = 39.0

[sub_resource type="CircleShape2D" id="CircleShape2D_847kk"]
radius = 38.2084

[sub_resource type="CircleShape2D" id="CircleShape2D_ho23h"]
radius = 38.21

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0cp76"]
size = Vector2(1366, 162.331)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f3mtp"]
size = Vector2(68.6972, 95.5696)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vuhi3"]
size = Vector2(401, 602)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gy66s"]
size = Vector2(574, 95)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_06s88"]
size = Vector2(81, 85)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uklup"]
size = Vector2(79, 89)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bem2y"]
size = Vector2(194, 831)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1g05k"]
size = Vector2(169.999, 1537.5)

[sub_resource type="Animation" id="Animation_ikgiu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tangan:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(793, 851)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tangan/TanganSprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("22_pyw83")]
}

[sub_resource type="Animation" id="Animation_b1ax8"]
resource_name = "get_food"
length = 2.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tangan")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"set_process_input"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tangan/TanganSprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("22_pyw83")]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"tween_tangan_ke_bawah"
}, {
"args": [],
"method": &"selesaikan_game"
}]
}

[sub_resource type="Animation" id="Animation_vgqjs"]
resource_name = "start_game"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tangan:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(793, 851), Vector2(832, 584)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tangan")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [false],
"method": &"set_process_input"
}, {
"args": [true],
"method": &"set_process_input"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Tangan/TanganSprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("23_4rhke")]
}

[sub_resource type="Animation" id="Animation_fwe44"]
resource_name = "tutorial_eat"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tutorials/Eat/ArrowRight:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(529, 688), Vector2(509, 688), Vector2(529, 688)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tutorials/Eat/ArrowLeft:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(809, 688), Vector2(829, 688), Vector2(809, 688)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Tutorials/Eat:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_uji25"]
resource_name = "tutorial_movement"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tutorials/Movement:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 50), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tutorials/Movement:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_l4388"]
resource_name = "grabbing_tutorial"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tutorials/Grabbing:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(11, 19), Vector2(11, -21)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tutorials/Grabbing:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_y5m3f"]
resource_name = "actual_start_game"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tangan:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(793, 851), Vector2(832, 584)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tangan")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [false],
"method": &"set_process_input"
}, {
"args": [true],
"method": &"set_process_input"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Tangan/TanganSprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("23_4rhke")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8410x"]
_data = {
"RESET": SubResource("Animation_ikgiu"),
"actual_start_game": SubResource("Animation_y5m3f"),
"get_food": SubResource("Animation_b1ax8"),
"grabbing_tutorial": SubResource("Animation_l4388"),
"start_game": SubResource("Animation_vgqjs"),
"tutorial_eat": SubResource("Animation_fwe44"),
"tutorial_movement": SubResource("Animation_uji25")
}

[node name="minigame_memakan_makanan" type="Node2D"]
script = ExtResource("1_nc0lm")

[node name="Background" type="Node2D" parent="."]
position = Vector2(683, 384)
scale = Vector2(0.711, 0.711)
metadata/_edit_group_ = true

[node name="Table" type="Sprite2D" parent="Background"]
texture = ExtResource("1_updoi")

[node name="Plate" type="Sprite2D" parent="Background"]
texture = ExtResource("2_75sqk")

[node name="Food" type="Node2D" parent="."]
position = Vector2(683, 384)
scale = Vector2(0.711, 0.711)

[node name="Sausage1Clip" type="Sprite2D" parent="Food"]

[node name="Sausage1" parent="Food/Sausage1Clip" instance=ExtResource("3_fp883")]
position = Vector2(-258.79, -185.654)

[node name="Sprite" parent="Food/Sausage1Clip/Sausage1" index="0"]
scale = Vector2(0.711, 0.711)
texture = ExtResource("7_ttgjg")
region_rect = Rect2(574.01, 243.187, 266.2, 251.559)

[node name="CollisionShape2D" parent="Food/Sausage1Clip/Sausage1" index="1"]
position = Vector2(2.81299, 2.81299)
rotation = 0.811578
scale = Vector2(2.743, 0.793)
shape = SubResource("CapsuleShape2D_qjnw3")

[node name="AreaCheck" parent="Food/Sausage1Clip/Sausage1" index="2"]
collision_layer = 25
collision_mask = 17

[node name="CollisionShape2D" parent="Food/Sausage1Clip/Sausage1/AreaCheck" index="0"]
position = Vector2(2.81294, 2.81294)
rotation = 0.811651
scale = Vector2(2.70768, 0.796757)
shape = SubResource("CapsuleShape2D_a8t8y")

[node name="Sausage2Clip" type="Sprite2D" parent="Food"]
position = Vector2(-191.28, -127.989)

[node name="Sausage2" parent="Food/Sausage2Clip" instance=ExtResource("3_fp883")]

[node name="Sprite" parent="Food/Sausage2Clip/Sausage2" index="0"]
scale = Vector2(0.711, 0.711)
texture = ExtResource("7_wj8dm")
region_rect = Rect2(649.351, 293.392, 251.465, 257.059)

[node name="CollisionShape2D" parent="Food/Sausage2Clip/Sausage2" index="1"]
position = Vector2(1.40664, 7.03261)
rotation = 3.90655
scale = Vector2(-2.403, 1.437)
shape = SubResource("CapsuleShape2D_sy334")

[node name="CollisionShape2D" parent="Food/Sausage2Clip/Sausage2/AreaCheck" index="0"]
position = Vector2(4.21941, 4.21941)
rotation = 0.763718
scale = Vector2(0.711, 0.711)
shape = SubResource("CapsuleShape2D_hjo1u")

[node name="Egg2Clip" type="Sprite2D" parent="Food"]
position = Vector2(63.2911, -102.672)

[node name="Egg2" parent="Food/Egg2Clip" instance=ExtResource("3_fp883")]
position = Vector2(-66.1041, -15.4712)

[node name="Sprite" parent="Food/Egg2Clip/Egg2" index="0"]
scale = Vector2(0.711, 0.711)
texture = ExtResource("8_gkxau")
region_rect = Rect2(851, 309, 220, 259)

[node name="CollisionShape2D" parent="Food/Egg2Clip/Egg2" index="1"]
position = Vector2(-9.84532, -14.0649)
rotation = 0.653928
scale = Vector2(0.711, 0.711)
shape = SubResource("CapsuleShape2D_n70my")

[node name="CollisionShape2D" parent="Food/Egg2Clip/Egg2/AreaCheck" index="0"]
position = Vector2(-9.84512, -14.0648)
rotation = 0.654498
scale = Vector2(0.711, 0.711)
shape = SubResource("CapsuleShape2D_jcrn1")

[node name="Egg1Clip" type="Sprite2D" parent="Food"]
position = Vector2(63.2911, -102.672)

[node name="Egg1" parent="Food/Egg1Clip" instance=ExtResource("3_fp883")]
position = Vector2(1.40649, 0)

[node name="Sprite" parent="Food/Egg1Clip/Egg1" index="0"]
scale = Vector2(0.711, 0.711)
texture = ExtResource("9_xxh1c")
region_rect = Rect2(931, 340, 196, 227)

[node name="CollisionShape2D" parent="Food/Egg1Clip/Egg1" index="1"]
position = Vector2(1.40647, 12.6579)
rotation = 0.765464
scale = Vector2(6.504, 6.271)
shape = SubResource("CapsuleShape2D_v2h1y")

[node name="CollisionShape2D" parent="Food/Egg1Clip/Egg1/AreaCheck" index="0"]
position = Vector2(1.40644, 12.6579)
rotation = 0.7662
scale = Vector2(7.215, 6.982)
shape = SubResource("CapsuleShape2D_s75ux")

[node name="Rice3Clip" type="Sprite2D" parent="Food"]
position = Vector2(-142.053, 123.769)

[node name="Rice3" parent="Food/Rice3Clip" instance=ExtResource("3_fp883")]

[node name="Sprite" parent="Food/Rice3Clip/Rice3" index="0"]
scale = Vector2(0.711, 0.711)
texture = ExtResource("3_06w3k")
region_rect = Rect2(738.461, 543.355, 184.545, 253.636)

[node name="CollisionShape2D" parent="Food/Rice3Clip/Rice3" index="1"]
position = Vector2(-9.84529, -2.81294)
rotation = 0.28581
scale = Vector2(1.435, 0.102)
shape = SubResource("CapsuleShape2D_fort1")

[node name="CollisionShape2D" parent="Food/Rice3Clip/Rice3/AreaCheck" index="0"]
position = Vector2(-9.845, -2.813)
rotation = 0.286234
scale = Vector2(1.435, 0.102)
shape = SubResource("CapsuleShape2D_rwybk")

[node name="Rice2Clip" type="Sprite2D" parent="Food"]
position = Vector2(-37.9747, 130.802)

[node name="Rice2" parent="Food/Rice2Clip" instance=ExtResource("3_fp883")]

[node name="Sprite" parent="Food/Rice2Clip/Rice2" index="0"]
scale = Vector2(0.711, 0.711)
texture = ExtResource("4_umbpg")
region_rect = Rect2(837.289, 552.826, 200.826, 248.76)

[node name="CollisionShape2D" parent="Food/Rice2Clip/Rice2" index="1"]
position = Vector2(-14.0647, 1.40613)
rotation = 0.422286
scale = Vector2(3.6, 1.566)
shape = SubResource("CapsuleShape2D_yifie")

[node name="CollisionShape2D" parent="Food/Rice2Clip/Rice2/AreaCheck" index="0"]
position = Vector2(-14.0647, 1.40614)
rotation = 0.431187
scale = Vector2(3.599, 1.566)
shape = SubResource("CapsuleShape2D_cpmca")

[node name="Rice1Clip" type="Sprite2D" parent="Food"]
position = Vector2(23.91, 147.679)

[node name="Rice1" parent="Food/Rice1Clip" instance=ExtResource("3_fp883")]

[node name="Sprite" parent="Food/Rice1Clip/Rice1" index="0"]
scale = Vector2(0.711, 0.711)
texture = ExtResource("5_oiww5")
region_rect = Rect2(901.656, 589.038, 204.358, 206.612)

[node name="CollisionShape2D" parent="Food/Rice1Clip/Rice1" index="1"]
position = Vector2(1.38818, 2.49329)
rotation = 0.604995
scale = Vector2(0.711, 0.711)
shape = SubResource("CapsuleShape2D_l2j3w")

[node name="CollisionShape2D" parent="Food/Rice1Clip/Rice1/AreaCheck" index="0"]
position = Vector2(1.40647, 2.81294)
rotation = 0.605629
scale = Vector2(0.711, 0.711)
shape = SubResource("CapsuleShape2D_488rf")

[node name="Vegetable1Clip" type="Sprite2D" parent="Food"]
position = Vector2(119.55, 42.194)

[node name="Vegetable1" parent="Food/Vegetable1Clip" instance=ExtResource("3_fp883")]

[node name="Sprite" parent="Food/Vegetable1Clip/Vegetable1" index="0"]
scale = Vector2(0.711, 0.711)
texture = ExtResource("12_nucvp")
region_rect = Rect2(1015.45, 544.546, 143.636, 110.909)

[node name="CollisionShape2D" parent="Food/Vegetable1Clip/Vegetable1" index="1"]
rotation = 1.24111
scale = Vector2(0.711, 0.711)
shape = SubResource("CircleShape2D_n6uew")

[node name="CollisionShape2D" parent="Food/Vegetable1Clip/Vegetable1/AreaCheck" index="0"]
scale = Vector2(0.711, 0.711)
shape = SubResource("CircleShape2D_und0a")

[node name="Vegetable2Clip" type="Sprite2D" parent="Food"]
position = Vector2(181.435, -39.3812)

[node name="Vegetable2" parent="Food/Vegetable2Clip" instance=ExtResource("3_fp883")]

[node name="Sprite" parent="Food/Vegetable2Clip/Vegetable2" index="0"]
scale = Vector2(0.711, 0.711)
texture = ExtResource("13_fooqg")
region_rect = Rect2(1078.18, 453.637, 115.454, 127.273)

[node name="CollisionShape2D" parent="Food/Vegetable2Clip/Vegetable2" index="1"]
scale = Vector2(0.711, 0.711)
shape = SubResource("CircleShape2D_847kk")

[node name="CollisionShape2D" parent="Food/Vegetable2Clip/Vegetable2/AreaCheck" index="0"]
scale = Vector2(0.711, 0.711)
shape = SubResource("CircleShape2D_ho23h")

[node name="BlackBar" type="Sprite2D" parent="."]
visible = false
position = Vector2(683, 384)
scale = Vector2(0.711, 0.711)
texture = ExtResource("15_xrxpe")

[node name="EatZone" type="Area2D" parent="."]
visible = false
position = Vector2(22, 36)
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="EatZone"]
position = Vector2(661, 650)
scale = Vector2(1, 1.01028)
shape = SubResource("RectangleShape2D_0cp76")

[node name="FoodReturnBoundary" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FoodReturnBoundary"]
position = Vector2(194.805, 302)
scale = Vector2(5.65366, 6.32)
shape = SubResource("RectangleShape2D_f3mtp")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="FoodReturnBoundary"]
position = Vector2(1164.5, 304)
shape = SubResource("RectangleShape2D_vuhi3")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="FoodReturnBoundary"]
position = Vector2(677, 48.5)
shape = SubResource("RectangleShape2D_gy66s")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="FoodReturnBoundary"]
position = Vector2(430.5, 138.5)
shape = SubResource("RectangleShape2D_06s88")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="FoodReturnBoundary"]
position = Vector2(925.5, 141.5)
shape = SubResource("RectangleShape2D_uklup")

[node name="TanganBorder" type="StaticBody2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TanganBorder"]
position = Vector2(14, 388)
shape = SubResource("RectangleShape2D_bem2y")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="TanganBorder"]
position = Vector2(1360, 373)
shape = SubResource("RectangleShape2D_bem2y")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TanganBorder"]
position = Vector2(734.25, -18.0003)
rotation = 1.57079
shape = SubResource("RectangleShape2D_1g05k")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="TanganBorder"]
position = Vector2(680, 853)
rotation = 1.57079
shape = SubResource("RectangleShape2D_1g05k")

[node name="Tangan" parent="." instance=ExtResource("21_aapbp")]
position = Vector2(793, 851)
rotation = -0.415388
collision_mask = 32
script = ExtResource("16_6lkrg")

[node name="TanganSprite" parent="Tangan" index="0"]
z_index = 1000
texture = ExtResource("22_pyw83")

[node name="AnimationMinigame" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8410x")
}
autoplay = "actual_start_game"

[node name="Tutorials" type="Node2D" parent="."]

[node name="Movement" type="Node2D" parent="Tutorials"]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, 50)

[node name="Keys" type="Node2D" parent="Tutorials/Movement"]
position = Vector2(-1, 3)

[node name="KeyboardArrowDown" type="Sprite2D" parent="Tutorials/Movement/Keys"]
position = Vector2(1070, 222)
texture = ExtResource("19_rq5mi")

[node name="KeyboardArrowLeft" type="Sprite2D" parent="Tutorials/Movement/Keys"]
position = Vector2(1009, 222)
texture = ExtResource("20_hi1bo")

[node name="KeyboardArrowRight" type="Sprite2D" parent="Tutorials/Movement/Keys"]
position = Vector2(1132, 222)
texture = ExtResource("21_e4p35")

[node name="KeyboardArrowUp" type="Sprite2D" parent="Tutorials/Movement/Keys"]
position = Vector2(1071, 163)
texture = ExtResource("22_8fm80")

[node name="Label" type="Label" parent="Tutorials/Movement"]
offset_left = 916.0
offset_top = 256.0
offset_right = 1227.0
offset_bottom = 280.0
theme_override_fonts/font = ExtResource("23_abk7g")
text = "Gunakan tombol panah untuk bergerak."

[node name="Grabbing" type="Node2D" parent="Tutorials"]
modulate = Color(1, 1, 1, 0)
position = Vector2(11, 19)

[node name="KeyboardZ" type="Sprite2D" parent="Tutorials/Grabbing"]
position = Vector2(1093, 381)
texture = ExtResource("24_1cklm")

[node name="Label" type="Label" parent="Tutorials/Grabbing"]
offset_left = 935.0
offset_top = 413.0
offset_right = 1265.0
offset_bottom = 437.0
theme_override_fonts/font = ExtResource("23_abk7g")
text = "Tahan tombol Z untuk mengambil makanan."

[node name="Eat" type="Node2D" parent="Tutorials"]
visible = false

[node name="ArrowRight" type="Sprite2D" parent="Tutorials/Eat"]
position = Vector2(517.718, 688)
texture = ExtResource("25_mdkhg")

[node name="ArrowLeft" type="Sprite2D" parent="Tutorials/Eat"]
position = Vector2(820.282, 688)
texture = ExtResource("26_q0rff")

[node name="Label" type="Label" parent="Tutorials/Eat"]
offset_left = 520.0
offset_top = 730.0
offset_right = 850.0
offset_bottom = 754.0
theme_override_fonts/font = ExtResource("23_abk7g")
text = "Tarik dan lepas di sini untuk memakan!"

[connection signal="grabbed" from="Food/Sausage1Clip/Sausage1" to="." method="_on_food_grabbed"]
[connection signal="released" from="Food/Sausage1Clip/Sausage1" to="." method="_on_food_released"]
[connection signal="grabbed" from="Food/Sausage2Clip/Sausage2" to="." method="_on_food_grabbed"]
[connection signal="released" from="Food/Sausage2Clip/Sausage2" to="." method="_on_food_released"]
[connection signal="grabbed" from="Food/Egg2Clip/Egg2" to="." method="_on_food_grabbed"]
[connection signal="released" from="Food/Egg2Clip/Egg2" to="." method="_on_food_released"]
[connection signal="grabbed" from="Food/Egg1Clip/Egg1" to="." method="_on_food_grabbed"]
[connection signal="released" from="Food/Egg1Clip/Egg1" to="." method="_on_food_released"]
[connection signal="grabbed" from="Food/Rice3Clip/Rice3" to="." method="_on_food_grabbed"]
[connection signal="released" from="Food/Rice3Clip/Rice3" to="." method="_on_food_released"]
[connection signal="grabbed" from="Food/Rice2Clip/Rice2" to="." method="_on_food_grabbed"]
[connection signal="released" from="Food/Rice2Clip/Rice2" to="." method="_on_food_released"]
[connection signal="grabbed" from="Food/Rice1Clip/Rice1" to="." method="_on_food_grabbed"]
[connection signal="released" from="Food/Rice1Clip/Rice1" to="." method="_on_food_released"]
[connection signal="grabbed" from="Food/Vegetable1Clip/Vegetable1" to="." method="_on_food_grabbed"]
[connection signal="released" from="Food/Vegetable1Clip/Vegetable1" to="." method="_on_food_released"]
[connection signal="grabbed" from="Food/Vegetable2Clip/Vegetable2" to="." method="_on_food_grabbed"]
[connection signal="released" from="Food/Vegetable2Clip/Vegetable2" to="." method="_on_food_released"]
[connection signal="animation_finished" from="AnimationMinigame" to="." method="_on_animation_finished"]

[editable path="Food/Sausage1Clip/Sausage1"]
[editable path="Food/Sausage2Clip/Sausage2"]
[editable path="Food/Egg2Clip/Egg2"]
[editable path="Food/Egg1Clip/Egg1"]
[editable path="Food/Rice3Clip/Rice3"]
[editable path="Food/Rice2Clip/Rice2"]
[editable path="Food/Rice1Clip/Rice1"]
[editable path="Food/Vegetable1Clip/Vegetable1"]
[editable path="Food/Vegetable2Clip/Vegetable2"]
[editable path="Tangan"]
